<resources>
    <string name="app_name">Material Design Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_recycler_view_linear">RecyclerViewLinear</string>
    <string name="title_activity_recycler_view_staggered">RecyclerViewStaggered</string>
    <string name="title_activity_collapsing_toolbar">CollapsingToolbar</string>
    <string name="title_activity_nav_view">NavView</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="title_activity_floats">Floats</string>
    <string name="title_activity_explode_animation">ExplodeAnimation</string>
    <string name="title_activity_snack">SnackActivity</string>
    <string name="s_click_me">Click the logo :)</string>
    <string name="s_option_one">Option 1</string>
    <string name="s_option_two">Option 2</string>
    <string name="s_option_three">Option 3</string>
    <string name="s_click_counter">Click Counter:</string>
    <string name="s_zero">0</string>
    <string name="b_click_me">Click me</string>
    <string name="b_normal_snack">Normal Snack</string>
    <string name="b_action_snack">ACtion Snack</string>
    <string name="b_infinite_snack">Infinite Snack</string>
    <string name="s_message_tabs">I don\'t like tabs :P</string>
    <string name="s_message_after_explode">Yep, that was the explosion effect :)</string>
    <string name="s_message">This is an app Demo, pictures from I/O Extended Lima 2015 (Thanks to @Guillermo and @jhoon) \n powered by \n@GDGLima - @AlvarDev</string>
    <string name="some_text">Feugiat accumsan lorem eu ac lorem amet sed accumsan donec. Blandit orci porttitor semper. Arcu phasellus tortor enim mi nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor accumsan consequat adipiscing lorem dolor.

Morbi enim nascetur et placerat lorem sed iaculis neque ante adipiscing  metus massa. Blandit orci porttitor semper. Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem ipsum dolor nullam.

    </string>
</resources>
