<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/lla_container"
    tools:context="com.gdglima.materialdesigntemplate.SnackActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:background="@color/primary"/>

    <Button
        android:id="@+id/bt_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_normal_snack"
        android:background="@color/accent"
        android:textColor="@color/white"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/bt_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_action_snack"
        android:background="@color/accent"
        android:textColor="@color/white"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/bt_infinite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_infinite_snack"
        android:background="@color/accent"
        android:textColor="@color/white"
        android:layout_margin="16dp"/>

</LinearLayout>
